option java_package = "com.voole.hobbit.proto";
option java_generate_equals_and_hash = true;
message V3aOrderPriceQueryRequest {
	optional uint64 uid = 1;
	optional uint32 oemid = 2;
	optional string hid = 3;
	optional uint32 epgid = 4;
	optional uint32 spid = 5;
}
message V3aOrderPriceQuery {
	optional V3aOrderPriceQueryRequest request = 1;
	optional V3aOrderPriceQueryResponse response = 2;
	repeated V3aOrderPriceQueryFilmPrice v3aOrderPriceQueryFilmPrice = 3;
	optional string serverip = 4;
	optional uint64 startTime = 5;
	optional uint64 endTime = 6;
}
message V3aRecharge {
	optional V3aRechargeRequest request = 1;
	optional V3aRechargeResponse response = 2;
	optional string serverip = 3;
	optional uint64 startTime = 4;
	optional uint64 endTime = 5;
}
message V3a3rdPayment {
	optional V3a3rdPaymentRequest request = 1;
	optional V3a3rdPaymentResponse response = 2;
	optional string serverip = 3;
	optional uint64 startTime = 4;
	optional uint64 endTime = 5;
}
message V3aOrderCancelResponse {
	optional string status = 1;
}
message V3aOrderPriceQueryFilmPrice {
	optional uint32 Mid = 1;
	optional string Mtype = 2;
	optional uint32 Price = 3;
}
message V3aPlayAuth2 {
	optional V3aPlayAuth2Request request = 1;
	optional V3aPlayAuth2Response response = 2;
	repeated V3aPlayAuth2PicAd v3aPlayAuth2PicAd = 3;
	repeated V3aPlayAuth2TxtAd v3aPlayAuth2TxtAd = 4;
	repeated V3aPlayAuth2VideoAd v3aPlayAuth2VideoAd = 5;
	optional string serverip = 6;
	optional uint64 startTime = 7;
	optional uint64 endTime = 8;
}
message V3aRepreatPlayQueryRequest {
	optional uint32 oemid = 1;
	optional string hid = 2;
	optional uint64 uid = 3;
	optional uint32 mid = 4;
	optional uint32 sid = 5;
	optional string fid = 6;
	optional uint32 tj = 7;
}
message V3aOrderRequest {
	optional uint32 pid = 1;
	optional uint32 feetype = 2;
	optional string spid = 3;
	optional uint64 starttime = 4;
	optional uint32 oemid = 5;
}
message V3aPlayAuth2TxtAd {
	optional uint32 txtid = 1;
	optional string txt = 2;
	optional uint64 inserttime = 3;
}
message V3aRechargeRequest {
	optional string cardno = 1;
	optional uint32 pid = 2;
	optional uint32 feetype = 3;
	optional uint32 spid = 4;
	optional uint64 uid = 5;
	optional string mobile = 6;
	optional string orderid = 7;
	optional uint32 orderfrom = 8;
	optional string hid = 9;
	optional uint32 oemid = 10;
}
message V3aPlayAuth2PicAd {
	optional string pic = 1;
	optional uint64 length = 2;
}
message V3aPlayAuth2Request {
	optional uint32 oemid = 1;
	optional uint64 uid = 2;
	optional string hid = 3;
	optional uint32 mid = 4;
	optional uint32 sid = 5;
	optional string fid = 6;
	optional uint32 pid = 7;
	optional uint32 playtype = 8;
}
message V3aOrderPriceQueryResponse {
	optional uint32 Count = 1;
}
message V3a3rdPaymentResponse {
	optional string cardno = 1;
	optional double money = 2;
	optional uint32 balance = 3;
	optional uint64 uid = 4;
	optional string status = 5;
}
message V3aOnlineStatusRequest {
	optional uint32 oemid = 1;
	optional uint32 uid = 2;
	optional string hid = 3;
	optional uint32 status = 4;
}
message V3aOrder {
	optional V3aOrderRequest request = 1;
	optional V3aOrderResponse response = 2;
	optional string serverip = 3;
	optional uint64 startTime = 4;
	optional uint64 endTime = 5;
}
message V3a3rdPaymentRequest {
	optional uint32 pid = 1;
	optional uint32 feetype = 2;
	optional uint32 spid = 3;
	optional uint64 uid = 4;
	optional double price = 5;
	optional string orderid = 6;
	optional uint32 orderfrom = 7;
	optional string hid = 8;
	optional uint32 oemid = 9;
}
message V3aRechargeResponse {
	optional string status = 1;
	optional uint32 balance = 2;
	optional uint32 money = 3;
}
message V3aRepreatPlayQuery {
	optional V3aRepreatPlayQueryRequest request = 1;
	optional V3aRepreatPlayQueryResponse response = 2;
	optional string serverip = 3;
	optional uint64 startTime = 4;
	optional uint64 endTime = 5;
}
message V3aOrderCancelRequest {
	optional uint32 pid = 1;
	optional uint32 feetype = 2;
	optional uint32 spid = 3;
	optional uint32 oemid = 4;
}
message V3aOrderCancel {
	optional V3aOrderCancelRequest request = 1;
	optional V3aOrderCancelResponse response = 2;
	optional string serverip = 3;
	optional uint64 startTime = 4;
	optional uint64 endTime = 5;
}
message V3aDelayDeduct {
	optional V3aDelayDeductRequest request = 1;
	optional V3aDelayDeductResponse response = 2;
	optional string serverip = 3;
	optional uint64 startTime = 4;
	optional uint64 endTime = 5;
}
message V3aUserAuthRequest {
}
message V3aOnlineStatus {
	optional V3aOnlineStatusRequest request = 1;
	optional V3aOnlineStatusResponse response = 2;
	optional string serverip = 3;
	optional uint64 startTime = 4;
	optional uint64 endTime = 5;
}
message V3aDelayDeductResponse {
	optional string status = 1;
	optional uint32 balance = 2;
}
message V3aDelayDeductRequest {
	optional uint32 oemid = 1;
	optional uint32 uid = 2;
	optional string hid = 3;
	optional uint32 mid = 4;
	optional uint32 sid = 5;
	optional string fid = 6;
	optional uint32 pid = 7;
}
message V3aOnlineStatusResponse {
	optional string status = 1;
}
message V3aRepreatPlayQueryResponse {
	optional string status = 1;
	optional uint32 viewed = 2;
	optional uint64 endtime = 3;
	optional uint32 order = 4;
	optional uint32 pid = 5;
	optional uint32 tjpid = 6;
}
message V3aOrderResponse {
	optional string status = 1;
}
message V3aPlayAuth2VideoAd {
	optional string video = 1;
	optional string txt = 2;
	optional uint64 inserttime = 3;
	optional uint64 length = 4;
}
message V3aPlayAuth2Response {
	optional string status = 1;
	optional string play_url = 2;
	optional uint32 delaydeduct = 3;
	optional uint32 delaytime = 4;
	optional string pid = 5;
	optional uint64 time = 6;
	optional uint64 stime = 7;
	optional uint64 etime = 8;
}
message V3aUserAuthResponse {
	optional string status = 1;
	optional uint64 uid = 2;
	optional uint32 oemid = 3;
	optional string hid = 4;
	optional string epgportal = 5;
	optional string epgportal2 = 6;
	optional uint32 balance = 7;
	optional uint32 ispid = 8;
}
message V3aUserAuth {
	optional V3aUserAuthRequest request = 1;
	optional V3aUserAuthResponse response = 2;
	optional string serverip = 3;
	optional uint64 startTime = 4;
	optional uint64 endTime = 5;
}
